keyboard.css
.virtual_keyboard_input_wrapper {
  position: relative;
}

.virtual_keyboard_toggle_anchor {
  position: absolute;
  right: 0px;
  top: 0px;
  padding: 5px;
}

.virtual_keyboard_toggle {
  padding: 5px;
}

.virtual_keyboard {
  position: absolute;
  top: 2px;
  left: 18px;
  background-color: #ffffff;
  width: 116px;
  border: 1px solid black;
  border-radius: 5px;
  padding: 3px;
}

.virtual_keyboard_letter_button {
  padding: 5px;
  margin: 2px;
  width: 25px;
}

.virtual_keyboard_shift_button {
  padding: 5px;
  margin: 2px;
  width: 83px;
}

